latest update; fixed minor bug in index.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <h1> Welcome to Raymond's Garage Sale </h1>
+  <h1> Welcome to Raymond's Rummage Repository </h1>
   <%= yield %>
 </body>
 </html>
